name:                hl3
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hl3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall
  default-extensions: DeriveFunctor
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiWayIf
                    , TemplateHaskell
  hs-source-dirs:      src
  exposed-modules:     Lambda.Typeless
                     , Lambda.Typeless.Calculation
                     , Lambda.Typeless.Detection
                     , Lambda.Typeless.Language
                     , Lambda.Typeless.Math
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hl3
